objects/rsgTrigger_Configuration_Setting__mdt/rsgTrigger_Configuration_Setting__mdt.object-meta.xml
<CustomObject>
    <description>rsgTriggers Configuration Settings</description>
    <label>rsgTrigger Configuration Setting</label>
    <pluralLabel>rsgTrigger Configuration Settings</pluralLabel>
</CustomObject>