objects/rsgTrigger_Configuration_Setting__mdt/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>