objects/rsgTrigger_Configuration_Setting__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>