objects/rsgTrigger_Configuration_Setting__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>