objects/rsgTrigger_Configuration_Setting__mdt/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>