objects/rsgTrigger_Configuration_Setting__mdt/fields/Trigger_Handler_Name__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Handler_Name__c</fullName>
    <label>Trigger Handler Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>