objects/rsgTrigger_Configuration_Setting__mdt/listViews/AP_Trigger_Configuration_Settings.listView-meta.xml
<ListView>
    <fullName>AP_Trigger_Configuration_Settings</fullName>
    <columns>DeveloperName</columns>
    <columns>Object_Name__c</columns>
    <columns>Operation_Type__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Trigger_Handler_Name__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>AP Trigger Configuration Settings</label>
</ListView>